<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.boscotec.game.MainActivity">
    <item
        android:id="@+id/predicts"
        android:orderInCategory="100"
        android:title="@string/predictz_com"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/solution"
        android:orderInCategory="99"
        android:title="@string/solutiontipsster"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/update"
        android:orderInCategory="98"
        android:title="@string/update"
        android:icon="@android:drawable/stat_sys_download_done"
        app:showAsAction="never"/>

</menu>
