<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="?actionBarSize">

    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin" android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home"
                android:textSize="20sp" android:layout_margin="15dp" android:layout_gravity="center" />
            <RadioGroup
                android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:text="@string/game" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
                    />
                <TextView android:text="@string/w" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
                    />
                <TextView android:text="@string/d" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="9dp" android:layout_marginStart="9dp"
                    android:layout_marginRight="9dp" android:layout_marginEnd="9dp"
                    />
                <TextView android:text="@string/l" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp" android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp" android:layout_marginEnd="10dp"
                    />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/mHomeFirstGame"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView android:text="@string/fg" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="25dp" android:layout_marginStart="25dp"
                    android:layout_marginRight="25dp" android:layout_marginEnd="25dp"
                    />
                <RadioButton android:id="@+id/H13" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/H11" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/H10" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </RadioGroup>
            <RadioGroup
                android:id="@+id/mHomeSecondGame"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView android:text="@string/sg" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="25dp" android:layout_marginStart="25dp"
                    android:layout_marginRight="25dp" android:layout_marginEnd="25dp"
                    />
                <RadioButton android:id="@+id/H23" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/H21" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/H20" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </RadioGroup>
            <RadioGroup
                android:id="@+id/mHomeThirdGame"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView android:text="@string/tg" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="25dp" android:layout_marginStart="25dp"
                    android:layout_marginRight="25dp" android:layout_marginEnd="25dp"
                    />
                <RadioButton android:id="@+id/H33" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/H31" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/H30" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </RadioGroup>
            <RadioGroup
                android:id="@+id/mHomeFourthGame"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView android:text="@string/ftg" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="25dp" android:layout_marginStart="25dp"
                    android:layout_marginRight="25dp" android:layout_marginEnd="25dp"
                    />
                <RadioButton android:id="@+id/H43" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/H41" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/H40" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </RadioGroup>
            <RadioGroup
                android:id="@+id/mHomeFifthGame"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView android:text="@string/flg" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="25dp" android:layout_marginStart="25dp"
                    android:layout_marginRight="25dp" android:layout_marginEnd="25dp"
                    />
                <RadioButton android:id="@+id/H53" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/H51" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/H50" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/away"
                android:textSize="20sp" android:layout_margin="15dp" android:layout_gravity="center" />
            <RadioGroup
                android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:text="@string/game" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
                    />
                <TextView android:text="@string/w" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
                    />
                <TextView android:text="@string/d" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="9dp" android:layout_marginStart="9dp"
                    android:layout_marginRight="9dp" android:layout_marginEnd="9dp"
                    />
                <TextView android:text="@string/l" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp" android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp" android:layout_marginEnd="10dp"
                    />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/mAwayFirstGame"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView android:text="@string/fg" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="25dp" android:layout_marginStart="25dp"
                    android:layout_marginRight="25dp" android:layout_marginEnd="25dp"
                    />
                <RadioButton android:id="@+id/A13" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/A11" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/A10" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </RadioGroup>
            <RadioGroup
                android:id="@+id/mAwaySecondGame"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView android:text="@string/sg" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="25dp" android:layout_marginStart="25dp"
                    android:layout_marginRight="25dp" android:layout_marginEnd="25dp"
                    />
                <RadioButton android:id="@+id/A23" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/A21" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/A20" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </RadioGroup>
            <RadioGroup
                android:id="@+id/mAwayThirdGame"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView android:text="@string/tg" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="25dp" android:layout_marginStart="25dp"
                    android:layout_marginRight="25dp" android:layout_marginEnd="25dp"
                    />
                <RadioButton android:id="@+id/A33" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/A31" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/A30" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </RadioGroup>
            <RadioGroup
                android:id="@+id/mAwayFourthGame"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView android:text="@string/ftg" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="25dp" android:layout_marginStart="25dp"
                    android:layout_marginRight="25dp" android:layout_marginEnd="25dp"
                    />
                <RadioButton android:id="@+id/A43" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/A41" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/A40" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </RadioGroup>
            <RadioGroup
                android:id="@+id/mAwayFifthGame"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView android:text="@string/flg" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="25dp" android:layout_marginStart="25dp"
                    android:layout_marginRight="25dp" android:layout_marginEnd="25dp"
                    />
                <RadioButton android:id="@+id/A53" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/A51" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <RadioButton android:id="@+id/A50" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="5dp" android:layout_marginLeft="5dp" android:layout_gravity="center"
            android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/mValue" android:textSize="25sp" tool:text="@string/value" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <Button android:id="@+id/mButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/calculate" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>